--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
                         <button class="toggle-btn" type="button">Voir Plus</button>
                     </div>
                 </div>
+                <div class="download-pdf">
+                    <a href="{{ paper.pdf_link }}" download class="download-btn">Télécharger le PDF</a>
+                </div>
             </div>
             {% endfor %}
         </div>
