--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="download-pdf">
-                    <a href="{{ paper.pdf_link }}" download class="download-btn">Télécharger le PDF</a>
+                    <a href="{{ paper.pdf_link }}" download="{{ paper.pdf_name }}" class="download-btn">Télécharger le PDF</a>
                 </div>
             </div>
             {% endfor %}
